syntax = "proto3";

package order;

option go_package = "./orderpb";

message Order {
    string id = 1;
    string customer_id = 2;
    string product_name = 3;
    int32 price = 4;
}

message CreateOrderRequest {
    Order order = 1;
}

message CreateOrderResponse {
    Order order = 1;
}

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}
